--- a/src/index.css
+++ b/src/index.css
@@ -505,7 +505,7 @@ body {
   width: 170px;
   border: 1px solid black;
   border-radius: 50%;
-  background-image: url("./images/junaid.png");
+  background-image: url("./images/me.png");
   background-size: cover;
   height: 170px;
 }
