--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   background: #fff;
   height: 100vh;
+  font-family: cursive;
 }
 
 .main-container {
@@ -38,9 +39,8 @@ body {
 }
 
 .logo {
-  font-family: "Acme", sans-serif;
   font-size: 1.8rem;
-  color: #55198b;
+  color: #ff9800;
   cursor: pointer;
 }
 
@@ -54,7 +54,6 @@ body {
   color: black;
   text-decoration: none;
   cursor: pointer;
-  font-family: "Varela Round", sans-serif;
 
   font-size: 1rem;
   font-weight: 400;
@@ -63,13 +62,13 @@ body {
 }
 
 .nav-links .anchor:hover {
-  color: #55198b;
+  color: #ff9800;
 }
 
 .anchor.active {
-  color: #55198b;
+  color: #ff9800;
   font-weight: 800;
-  border-bottom: 2px solid #55198b;
+  border-bottom: 2px solid #ff9800;
 }
 
 .menu-icon {
@@ -78,7 +77,6 @@ body {
 
 /* Home */
 .home-container {
-  font-family: "Varela Round", sans-serif;
   display: flex;
   color: white;
   flex-direction: row;
@@ -106,8 +104,7 @@ body {
 
 .skill-content {
   margin: 0.6rem 0;
-  color: #9c72be;
-  font-family: "Varela Round", sans-serif;
+  color: #ff9800;
 
   font-weight: 400;
   font-size: 1.6rem;
@@ -151,7 +148,6 @@ body {
   width: 100%;
   height: 100vh;
   flex-direction: column;
-  font-family: "Exo 2", sans-serif;
   color: rgb(0, 0, 0);
   font-size: 1.3rem;
   padding: 2rem;
@@ -197,7 +193,6 @@ body {
 
 .services li {
   list-style-type: none;
-  font-family: "Varela Round", sans-serif;
   font-size: 1rem;
   font-weight: 700;
 }
@@ -205,7 +200,6 @@ body {
 /* Skills */
 
 .skills-container {
-  font-family: "Exo 2", sans-serif;
   display: flex;
   color: rgb(0, 0, 0);
   font-size: 1.3rem;
@@ -253,7 +247,6 @@ body {
 
 .techs li {
   list-style-type: none;
-  font-family: "Varela Round", sans-serif;
   font-size: 1rem;
   font-weight: 700;
 }
@@ -292,7 +285,6 @@ body {
 
 /* Portfolio */
 .portfolio-container {
-  font-family: "Exo 2", sans-serif;
   display: flex;
   color: rgb(0, 0, 0);
   font-size: 1.3rem;
@@ -333,43 +325,49 @@ body {
   border-radius: 10px;
   cursor: pointer;
   width: 100%;
-  border-bottom: 1px solid #55198b;
+  border-bottom: 1px solid #ff9800;
   height: 70%;
 }
 
 /* Images Proportion (877 * 679)*/
-#coronaTracker {
-  background-image: url("./images/projects/covid.png");
+#dancassab {
+  background-image: url("./images/projects/dancassab.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-#shoeStore {
-  background-image: url("./images/projects/nike.png");
+#carpediem {
+  background-image: url("./images/projects/carpediem.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-#quizApp {
-  background-image: url("./images/projects/quiz.png");
+#minimeis {
+  background-image: url("./images/projects/minimeis.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-#expenseTracker {
-  background-image: url("./images/projects/expense.png");
+#bizness {
+  background-image: url("./images/projects/bizness.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-#matiari {
-  background-image: url("./images/projects/matiari.png");
+#channelmum {
+  background-image: url("./images/projects/channelmum.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-#spacexWebsite {
-  background-image: url("./images/projects/spacex.png");
+#onrun {
+  background-image: url("./images/projects/onrun.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#wevedo {
+  background-image: url("./images/projects/wevedo.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -387,7 +385,6 @@ body {
   width: 100%;
   height: 50%;
   color: black;
-  font-family: "Varela Round", sans-serif;
   font-size: 0.8rem;
   display: flex;
   align-items: center;
@@ -411,11 +408,11 @@ body {
 }
 
 .icons #live {
-  background-color: rgb(16, 88, 16);
+  background-color: #ff9800;
 }
 
 .icons #live:hover {
-  background-color: rgb(16, 65, 88);
+  background-color: #ff9800;
 }
 
 .icons i {
@@ -436,7 +433,6 @@ body {
 
 /* Achievements */
 .achievements-container {
-  font-family: "Exo 2", sans-serif;
   display: flex;
   color: rgb(0, 0, 0);
   font-size: 1.3rem;
@@ -487,7 +483,6 @@ body {
 
 /* Contact */
 .contact-container {
-  font-family: "Exo 2", sans-serif;
   display: flex;
   color: rgb(0, 0, 0);
   font-size: 1.3rem;
@@ -552,8 +547,6 @@ body {
   display: flex;
   margin-top: 0.7rem;
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
   height: 33.33%;
   font-size: 1rem;
   align-items: center;
@@ -564,8 +557,6 @@ body {
   margin-top: 0.7rem;
   display: flex;
   font-size: 1rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
   width: 90%;
   height: 33.33%;
   align-items: center;
@@ -607,12 +598,12 @@ body {
   color: rgb(0, 0, 0);
 }
 
-.contact-links #facebook {
-  color: rgba(28, 28, 231, 0.938);
+.contact-links #angel {
+  color: black;
 }
 
-.contact-links:hover #facebook {
-  color: rgb(28, 28, 231);
+.contact-links:hover #angel {
+  color: black;
 }
 
 .contact-links #instagram {
@@ -624,11 +615,11 @@ body {
 }
 
 .contact-links #linkedin {
-  color: #3d8eb7ea;
+  color: #005496;
 }
 
 .contact-links:hover #linkedin {
-  color: #3d8eb7;
+  color: #005496;
 }
 
 .contact-links #twitter {
@@ -640,7 +631,7 @@ body {
 }
 
 .contact-icons i {
-  color: #f35166;
+  color: #ff9800;
   cursor: pointer;
   font-size: 1.7rem;
   position: relative;
@@ -650,7 +641,6 @@ body {
 
 /* Footer */
 .footer-container {
-  font-family: "Exo 2", sans-serif;
   display: flex;
   color: black;
   font-size: 0.7rem;
@@ -665,14 +655,12 @@ body {
 
 .footer-container a {
   text-decoration: none;
-  font-family: "Varela Round", sans-serif;
 
-  color: #9300ff;
-  text-shadow: 1px 1px 1px black;
+  color: #ff9800;
 }
 
 .footer-container a:hover {
-  color: #5bbd22c5;
+  color: black;
 }
 
 /* General */
@@ -683,7 +671,7 @@ body {
 
 .button:hover {
   background-color: #fff;
-  color: #55198b;
+  color: #ff9800;
   transition: all 0.3s ease 0s;
   transform: translateY(-3px);
 }
@@ -693,8 +681,8 @@ body {
 }
 
 .button {
-  background-color: #55198b;
-  border: 1px solid #55198b;
+  background-color: #ff9800;
+  border: 1px solid #ff9800;
   color: #fff;
   font-weight: 700;
   min-width: 200px;
@@ -716,7 +704,6 @@ body {
 
 .heading {
   margin: 2rem 0;
-  font-family: "Varela Round", sans-serif;
   color: black;
 }
 
