--- a/src/index.css
+++ b/src/index.css
@@ -224,6 +224,15 @@ body {
   align-items: center;
   justify-content: space-evenly;
 }
+
+@media screen and (max-width: 768px) {
+  .d-flex {
+    display: block;
+  }
+  .mobile li {
+    margin-bottom: 15px;
+  }
+}
 .techs {
   width: 100%;
 
